Fix some regressions after merging widget/operator project creation